--- a/about-us.html
+++ b/about-us.html
@@ -46,7 +46,7 @@
     </header>
     <main>
         <section class="inner-hero-section">
-            <img src="images/why-lumina-bg-01.jpg" alt="" class="img-fluid">
+            <img src="images/why-lumina-bg-01.jpg" alt="" class="img-fluid" style="object-position: 100%;">
             <h1>about us</h1>
         </section>
         <!-- <section class="what-lumina p-top p-bottom">
@@ -186,9 +186,9 @@
                         </div>
                     </div>
                 </div> -->
-                <div class="content-para text-center">
+                <!-- <div class="content-para text-center">
                     <p>Lumina Terra is not just a place of learning; it is a hub of inspiration and transformation. Together, we strive to empower our students to reach for the sky and beyond, shaping a future filled with promise and possibility, guided by principles on education.</p>
-                </div>
+                </div> -->
                 <div class="link-wrapper two">
                     <a href="register-now.html" class="global-btn-two">register now</a>
                 </div>
@@ -201,7 +201,7 @@
                 <div class="what-lumnia-grid">
                     <div class="what-lumnia-grid-item">
                         <div class="content-para">
-                            <p>Our children are not only learning and growing, but they also feel the strong support of an educational community dedicated to inspiring them to achieve new goals every day.</p>
+                            <p>At our school, children are not only learning and growing—they are thriving in an environment that celebrates diversity, fosters global citizenship, and champions sustainable thinking. Surrounded by a vibrant community of educators, mentors, and peers from around the world, our students feel the daily support of a learning culture that nurtures their individual strengths and encourages them to explore new ideas with confidence and purpose.</p>
                             <a href="why-lumina.html" class="globalbtn-one">know more</a>
                         </div>
                     </div>
@@ -338,6 +338,18 @@
                         </div>
                         <div class="text-center">
                             <a href="international-committee/Pirjo-Koivula.html" target="_blank">read more</a>
+                        </div>
+                    </div>
+                    <div class="educational-grid-item">
+                        <div class="img-wrapper">
+                            <img src="images/visionaries/Jayant-Krishna-01.jpg" alt="" class="img-fluid">
+                        </div>
+                        <h4 class="heading-tertiary"><a href="international-committee/Jayant-Krishna.html" target="_blank">Jayant Krishna</a></h4>
+                        <div class="content-para">
+                            <p>CEO & COO of the National Skill Development Corporation</p>
+                        </div>
+                        <div class="text-center">
+                            <a href="international-committee/Jayant-Krishna.html" target="_blank">read more</a>
                         </div>
                     </div>
                     <div class="educational-grid-item">
