--- a/competency-profile.html
+++ b/competency-profile.html
@@ -4,36 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | Lumina Terra</title>
+    <title>Program | Lumina Terra</title>
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="vendor/css/bootstrap.min.css">
     <link rel="stylesheet" href="vendor/css/owl.carousel.min.css">
     <link rel="stylesheet" href="vendor/css/jquery-ui.min.css">
     <link rel="stylesheet" href="css/main.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CGTE0P6J62"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-CGTE0P6J62');
-    </script>
-    <!-- Hotjar Tracking Code for Lumina Terra Contact Us Page Hotjar -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:6440000,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
 </head>
 
 <body>
+    <!-- <div class="online-counselling">
+        <a href="https://forms.gle/A2PqCFi7486vxwwi6" target="_blank">Register for online
+            counselling</a>
+    </div> -->
     <header>
         <div class="container">
             <nav>
@@ -63,53 +46,19 @@
         </div>
     </header>
     <main>
-        <section class="inner-hero-section">
-            <img src="images/about-head-bg-01.jpg" alt="" class="img-fluid">
-            <h1>contact us</h1>
+         <section class="inner-hero-section">
+            <img src="images/our-facilities-bg-01.jpg" alt="" class="img-fluid">
+            <h1>competency profile</h1>
         </section>
-        <div class="contact-form m-top">
+        <section class="competency-profile p-top p-bottom">
             <div class="container">
                 <div class="row">
-
-                    <div class="col-md-7" style="margin: auto; float: none;">
-                        <div class="contact-venue">
-                            <ul class="contact-venue__list">
-                                <li class="contact-venue__list-item">
-                                    <span class="contact-venue__list-icon">
-                                        <i aria-hidden="true" class="fas fa-map-marker-alt"></i>
-                                    </span>
-                                    <span class="contact-venue__list-text">Lumina Terra School, Opposite Palassio Mall,
-                                        Lucknow, Uttar Pradesh, India, 226010</span>
-                                    </span>
-                                </li>
-                                <li class="contact-venue__list-item">
-
-
-                                    <span class="contact-venue__list-icon">
-                                        <i aria-hidden="true" class="fas fa-phone"></i> </span>
-                                    <span class="contact-venue__list-text"><a href="tel:+917408405000">+91-740 840
-                                            5000</a></span>
-                                </li>
-                                <li class="contact-venue__list-item">
-                                    <span class="contact-venue__list-icon">
-                                        <i aria-hidden="true" class="fas fa-envelope"></i> </span>
-                                    <span class="contact-venue__list-text"><a
-                                            href="mailto:info@luminaterra.org">info@luminaterra.org</a></span>
-                                </li>
-                            </ul>
-                        </div>
-                        <iframe src="https://forms.gle/A2PqCFi7486vxwwi6" width="100%" height="3100px"
-                            style="border:none;"></iframe>
+                    <div class="col-md-9 mx-auto">
+                        <div class="img-wrapper"><img src="images/Competencial-profile-01.jpg" alt="" class="img-fluid"></div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="mapArea m-top">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8271.78781644538!2d81.0038084!3d26.809752!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399be3938f1d59b9%3A0x39cfcdac891240cd!2sLUMINA%20TERRA%20SCHOOL%20OF%20NATION&#39;S!5e1!3m2!1sen!2sin!4v1750245750545!5m2!1sen!2sin"
-                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        </section>
     </main>
 
     <footer class="p-top p-bottom">
@@ -146,7 +95,6 @@
             </div>
         </div>
     </footer>
-
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/jquery-ui.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
