--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
 
 
 
-    <title>Lumina Terra School of Nations | Exclusive, Innovative & Sustainable K-12 Education</title>
-    <meta name="description"
-        content="Lumina Terra School of Nations, Lucknow, provides personalized education, small classes, hands-on learning, sustainability, and innovative ALfA Pedagogy from Playgroup to Grade 5—future-ready exclusive CBSE/IB K-12 school">
+    <title>Lumina Terra School of Nations | Exclusive, Innovative & Sustainable K-12 Education | Lumina Terra CBSE
+        School Shaheed Path Lucknow | Where Children Discover, Create & Thrive | Lumina Terra School Near Police
+        Headquarters Gomti Greens Opposite Palassio Mall Lucknow, UP
+    </title>
+    <meta name="description" content="Lumina Terra School of Nations, Lucknow, provides personalized education, small classes, hands-on learning, sustainability, and innovative ALfA Pedagogy from Playgroup to Grade 5—future-ready exclusive CBSE/IB K-12 school, Join Lumina Terra CBSE Schools without Limits, register your interest to get more information about Lumina Terra School located near Gomti Greens Shaheed Path Opposite Palassio Mall Lucknow, Uttar Pradesh
+">
     <meta name="keywords"
-        content="Lumina Terra School of Nations, personalized education, sustainable school, innovative education, unique architecture, ALfA Pedagogy, CBSE school Lucknow, IB school Lucknow, Playgroup to Grade 5, K-12 school, hands-on learning, small class sizes, future-ready learning, global experts, nurturing environment, exclusive school Lucknow, top CBSE School, unique school, exclusive school, international school Lucknow" />
+        content="Lumina Terra School of Nations, personalized education, sustainable school, innovative education, unique architecture, ALfA Pedagogy, CBSE school Lucknow, IB school Lucknow, Playgroup to Grade 5, K-12 school, hands-on learning, small class sizes, future-ready learning, global experts, nurturing environment, exclusive school Lucknow, top CBSE School, unique school, exclusive school, international school Lucknow, Lumina Terra, Lumina Terra School, Lumina Terra CBSE School, Lumina Terra CBSE School Lucknow, Lumina Terra School Shaheed Path, Lumina Terra School Near Shaheed Path, Lumina Terra School Near Palassio Mall, Lumina Terra School Opposite Palassio Mall, Lumina Terra School Shaheed Path Location, Lumina Terra School Location, Lumina Terra School Location Mam, Lumina Terra School Owner Name, Lumina Terra School Contact Number, Lumina Terra School Website, Lumina Terra School Near Omax Residency, Lumina Terra School Near Mishri Malai Sweets, Lumina Terra School Near Tanisq Jewellers, Lumina Terra School Gomti Nagar Lucknow, Lumina Terra School Shaheed Path Lucknow, Lumina Terra School Gomit Nagar Vistaar, Lumina Terra School Near Arjun Ganj Lucknow, Lumina Terra School Near Phoenix Palassio Mall" />
     <meta name="google-site-verification" content="d67O-cKmOAdIw1yUJI-OfzpEmUqpn6KPHePb0u3XyPQ" />
     <meta name="author" content="Ramji Tiwari">
     <meta name="revisit-after" content="1 days">
@@ -35,7 +38,15 @@
 
         gtag('config', 'G-XLF5N5QJNZ');
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-141K42SZVV"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
+        gtag('config', 'G-141K42SZVV');
+    </script>
 
 </head>
 
@@ -91,7 +102,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 mx-auto">
-                        <h2 class="heading-primary text-center">“Every leaf holds a lesson, every breeze tells a story—our classrooms are alive.”</h2>
+                        <h2 class="heading-primary text-center">“Every leaf holds a lesson, every breeze tells a
+                            story—our classrooms are alive.”</h2>
                     </div>
                 </div>
             </div>
@@ -119,7 +131,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 mx-auto">
-                        <h2 class="heading-primary text-center">“We don’t shape children—we shape spaces where they can shape themselves.”</h2>
+                        <h2 class="heading-primary text-center">“We don’t shape children—we shape spaces where they can
+                            shape themselves.”</h2>
                     </div>
                 </div>
             </div>
@@ -131,7 +144,12 @@
                         <h2 class="heading-primary">The World’s Most Outstanding Sustainable School</h2>
                         <div class="border-bottom"></div>
                         <div class="content-para">
-                            <p>At Lumina Terra, we redefine education as a transformative journey where sustainability, innovation, creativity, & leadership converge. Our mission is to prepare students to become global leaders & changemakers of tomorrow. Derived from Latin, Terra means Earth or land, symbolizing sustainability & a profound connection to the natural world. Nova Terra represents a “New Earth,” blending environmental stewardship with educational innovation to inspire meaningful transformation.
+                            <p>At Lumina Terra, we redefine education as a transformative journey where sustainability,
+                                innovation, creativity, & leadership converge. Our mission is to prepare students to
+                                become global leaders & changemakers of tomorrow. Derived from Latin, Terra means Earth
+                                or land, symbolizing sustainability & a profound connection to the natural world. Nova
+                                Terra represents a “New Earth,” blending environmental stewardship with educational
+                                innovation to inspire meaningful transformation.
                             </p>
                             <div class="btn-wrapper"><a href="about-us.html" class="global-btn-one">about us</a></div>
                         </div>
@@ -146,7 +164,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-9 mx-auto">
-                        <h2 class="heading-primary text-center">“At Lumina Terra, questions matter more than answers—and wonder is the curriculum.”</h2>
+                        <h2 class="heading-primary text-center">“At Lumina Terra, questions matter more than answers—and
+                            wonder is the curriculum.”</h2>
                     </div>
                 </div>
             </div>
@@ -239,7 +258,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 mx-auto">
-                        <h2 class="heading-primary text-center">“Connection before correction. We raise children who feel seen, heard, and valued.”</h2>
+                        <h2 class="heading-primary text-center">“Connection before correction. We raise children who
+                            feel seen, heard, and valued.”</h2>
                     </div>
                 </div>
             </div>
@@ -248,11 +268,12 @@
             <div class="container">
                 <div class="campus-grid">
                     <div class="content-wrapper">
-                        <h2 class="heading-primary">A truly 
-                            sustainable 
+                        <h2 class="heading-primary">A truly
+                            sustainable
                             campus</h2>
                         <div class="space-one"></div>
-                        <p>A sustainable school, crafted by global experts and architects, backed by evidence, shaping the future.</p>
+                        <p>A sustainable school, crafted by global experts and architects, backed by evidence, shaping
+                            the future.</p>
                     </div>
                 </div>
             </div>
@@ -264,7 +285,9 @@
                 <img src="images/logo.png" alt="" class="img-flui">
             </div>
             <div class="footer-text">
-                <p>At Lumina Terra, we believe learning should feel like it belongs to the child. Set in nature-rich spaces and shaped by curiosity, our approach nurtures thinkers, doers, and quiet observers alike. It’s education that grows with them — relevant, real, and rooted.</p>
+                <p>At Lumina Terra, we believe learning should feel like it belongs to the child. Set in nature-rich
+                    spaces and shaped by curiosity, our approach nurtures thinkers, doers, and quiet observers alike.
+                    It’s education that grows with them — relevant, real, and rooted.</p>
             </div>
             <div class="footer-links">
                 <ul>
@@ -273,13 +296,13 @@
                 </ul>
             </div>
             <div class="footer-social">
-                 <ul>
+                <ul>
                     <!-- <li><a href="" target="_blank" style="--fclr:#557dbc;">
                         <i class="fa-brands fa-facebook-f"></i>
                     </a></li> -->
                     <li><a href="https://wa.me/+34 653013859" target="_blank" style="--fclr:#29a71a;">
-                        <i class="fa-brands fa-whatsapp"></i>
-                    </a></li>
+                            <i class="fa-brands fa-whatsapp"></i>
+                        </a></li>
                     <!-- <li><a href="" target="_blank" style="--fclr:#03a9f4;">
                         <i class="fa-brands fa-twitter"></i>
                     </a></li>
