--- a/why-lumina.html
+++ b/why-lumina.html
@@ -63,7 +63,7 @@
                         <h2 class="heading-primary">lumina terra students are prepared for the real world</h2>
                         <div class="content-para">
                             <p>We empower students to face and to take on today's and tomorrow’s challenges.</p>
-                            <p>We have developed a competency profile that covers five different transformations and
+                            <p>We have developed a <a href="competency-profile.html" class="internal-link">competency profile</a> that covers five different transformations and
                                 sub-competences, with the aim of promoting a transformative, holistic education that has
                                 an impact both on our students’ learning and on the world.</p>
                             <p>Our purpose as an education group at the forefront of global education is materialised
